dropshot/tests/fail/bad_server_endpoint10.stderr
error[E0277]: the trait bound `Result<HttpResponseOk<()>, String>: dropshot::api_description::HttpResultType` is not satisfied
  --> tests/fail/bad_server_endpoint10.rs:19:10
   |
19 |     ) -> Result<HttpResponseOk<()>, String>;
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `dropshot::api_description::HttpResultType` is not implemented for `Result<HttpResponseOk<()>, String>`
   |
   = help: the trait `dropshot::api_description::HttpResultType` is implemented for `Result<T, HttpError>`
note: required by a bound in `ApiEndpoint::<StubContext>::new_stub`
  --> src/api_description.rs
   |
   |     pub fn new_stub<FuncParams, ResultType>(
   |            -------- required by a bound in this associated function
...
   |         ResultType: HttpResultType,
   |                     ^^^^^^^^^^^^^^ required by this bound in `ApiEndpoint::<StubContext>::new_stub`

error[E0277]: the trait bound `fn(RequestContext<<ServerImpl as MyServer>::Context>) -> impl Future<Output = Result<HttpResponseOk<()>, String>> + Send + 'static {<ServerImpl as MyServer>::bad_error_type}: dropshot::handler::HttpHandlerFunc<_, _, _>` is not satisfied
  --> tests/fail/bad_server_endpoint10.rs:17:14
   |
9  | #[dropshot::server]
   | ------------------- required by a bound introduced by this call
...
17 |     async fn bad_error_type(
   |              ^^^^^^^^^^^^^^ the trait `dropshot::handler::HttpHandlerFunc<_, _, _>` is not implemented for fn item `fn(RequestContext<<ServerImpl as MyServer>::Context>) -> ... {<... as MyServer>::bad_error_type}`
   |
note: required by a bound in `ApiEndpoint::<Context>::new`
  --> src/api_description.rs
   |
   |     pub fn new<HandlerType, FuncParams, ResponseType>(
   |            --- required by a bound in this associated function
...
   |         HandlerType: HttpHandlerFunc<Context, FuncParams, ResponseType>,
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ApiEndpoint::<Context>::new`
